Fix text contrast in light mode

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,7 +26,7 @@ html,
 }
 
 .App {
-  color: $gray;
+  color: $dark;
   display: flex;
 }
 
